:sparkles: fix popup, block-title and top elements in operator page in dark mode

--- a/isofw-web/src/components/project/style.sass
+++ b/isofw-web/src/components/project/style.sass
@@ -28,6 +28,10 @@
   height: 1rem
 .currentBox, .titleBox, .customButton
   background-color: white
+  @media (prefers-color-scheme: dark)
+    background-color: #1c1c1d
+    border: 1px solid #282829
+    color: white
   padding: 0.4rem
   margin: 0pt 1.4rem
   border-radius: 10pt
@@ -72,8 +76,14 @@
   font-size: 1.5rem
   padding-top: 0.1rem
   padding-bottom: 0.1rem
+  @media (prefers-color-scheme: dark)
+    background-color: #1c1c1d
+    border: 1px solid #282829
+    color: white !important
   a
     color: black
+    @media (prefers-color-scheme: dark)
+      color: white !important
   &.withPadding
     padding-left: 0.7rem
     padding-right: 0.7rem
@@ -105,3 +115,9 @@
   min-width: 150pt
   max-width: 150pt
   min-height: 130pt
+
+@media (prefers-color-scheme: dark)
+  .popup
+    background-color: #171717
+  .block-title
+    color: white
